<resources>
    <string name="app_name">School</string>
    <string name="school">"בית הספר"</string>
    <string name="avnerBarazany">"ע\"ש אבנר ברזני"</string>
    <string name="whoIsAvnerBarazany">"אבנר ברזני\n מי האיש"</string>

    <string name="phoneBook">ספר טלפונים</string>
    <string name="eventPlan">תוכנית אירועים</string>
    <string name="messages">הודעות</string>
    <string name="gallery">גלריית תמונות</string>
    <string name="sendToParents">פניה לנציגות הורים</string>
    <string name="sendToManagement">פניה למנהלת</string>
    <string name="sendToNoonCare">פניה לצהרונים</string>
    <string name="settings">הגדרות</string>
    <string name="feedback">משוב</string>

</resources>
